# Embedded-MQTT-Client-Library

./: .travis.yml  README.md
CommonLib/: CLIB_api.h  CLIB_bit.h  CLIB_def.h  CLIB_heap.c  CLIB_heap.h  CLIB_list.h  CLIB_net.c  CLIB_net.h
Document/: Doxyfile
MQTTClient/interface/: MQC_api.h  MQC_config_templete.h  MQC_wrap.h
MQTTClient/src/inc/: MQC_core.h  MQC_def.h  MQC_net.h  MQC_queue.h
MQTTClient/src/src/: MQC_api.c  MQC_core.c  MQC_net.c  MQC_queue.c
Platform/Embedded/: MQC_config.h
Platform/Linux/: MQC_config.h  wrapper.c  wrapper.h
Platform/Mbedtls/: wrapper_ssl.c  wrapper_ssl.h
Project/CMake/: CMakeLists.txt
Project/CMake/CommonLib/: CMakeLists.txt
Project/CMake/MQTTClient/: CMakeLists.txt
Project/CMake/mini_client/: CMakeLists.txt
Project/CMake/paho_test/: CMakeLists.txt
Project/CMake/ssl_client/: CMakeLists.txt
Project/Make/: Makefile
Project/Make/CommonLib/: Makefile
Project/Make/MQTTClient/: Makefile
Project/Make/mini_client/: Makefile  mini_client
Project/Make/paho_test/: Makefile
Project/Make/ssl_client/: Makefile  ssl_client
Sample/: mini_client.c  ssl_client.c
Tests/Paho_Interoperability_Testing/: client_test_suite.c  client_test_suite.h  test_case_1.c  test_case_10.c  test_case_11.c  test_case_12.c  test_case_13.c  test_case_14.c  test_case_15.c  test_case_2.c  test_case_3.c  test_case_4.c  test_case_5.c  test_case_6.c  test_case_7.c  test_case_8.c  test_case_9.c
